[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bone_models"
version = "0.1.0"
description = "A library for bone models including bone cell population, mineralization, and failure simulation models."
authors = [{ name = "Corinna Modiz", email = "corinna.modiz@hdr.qut.edu.au" }]
dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.0",
    "matplotlib==3.8.4"
]
license = { text = "MIT" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/cmodiz/Bone-Models"
repository = "https://github.com/cmodiz/Bone-Models"

[tool.setuptools.packages.find]
include = ["bone_models*"]
exclude = ["examples*", "build*", "Code*", "docs*"]